[tool.poetry]
name = "repl_python3_Anti-Spammer-Bot"
version = "0.1.0"
description = ""
authors = ["ShivanshSharm25 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
jason = "^0.1.7"
replit = "^3.2.4"
virustotal-python = "^0.1.3"
vt = "^3.1.3"
Flask = "^2.0.2"
wikipedia = "^1.4.0"
python-dotenv = "^0.19.1"
regex = "^2021.10.23"
validators = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
